--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
-<center><h1>Feminismo</h1></center>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Feminismo</title>
+</head>
+<body>
+	
+<style>
+body {
+	background-color: #eeeee;
+}
+</style>
+
+<center style="margin-top: 12px;"><h1>Feminismo</h1></center>
+
+</body>
+</html>
